[project]
name = "efectiw-roter"
version = "1.0.0"
description = "EFECTIW-ROTER fork of attention-learn-to-route for HFDVRPTW (SIGSPATIAL 2024)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "tqdm>=4.66",
    "tensorboard>=2.15",
]
[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
