[project]
name = "sed2am"
version = "1.0.0"
description = "SED2AM — Simultaneous Encoder Dual Decoder Attention Model for MTTDVRP"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "mlflow>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sed2am-train = "train_sed2am:main"
sed2am-eval = "eval_sed2am:main"
sed2am-ablate = "ablation_sed2am:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
